Revert "Temporary fix for search field overlapping with categories field"
This reverts commit 0f2d6d51d214d9b904daf0789a932f96b97e029f.

--- a/OurUmbraco.Site/Assets/css/style.css
+++ b/OurUmbraco.Site/Assets/css/style.css
@@ -12020,9 +12020,9 @@ section.forum .col-md-6 {
 
 .forum-overview .forum-settings .search-big {
 	-webkit-box-flex: 0;
-	-webkit-flex: 0 0 57%;
-	-ms-flex: 0 0 57%;
-	flex: 0 0 57%;
+	-webkit-flex: 0 0 70%;
+	-ms-flex: 0 0 70%;
+	flex: 0 0 70%;
 }
 
 .forum-overview .forum-settings .sorting {
